Changed evaluation keys and added line change on evaluation

--- a/Lich.html
+++ b/Lich.html
@@ -90,8 +90,13 @@ The goal of the language is to keep the list short in the hopes that they can be
 
 Here's the catch. Everything is written with prefix notation. What the means is there is no operator precedence and everything is executed from the left. This takes some getting used to with most of the common operators like math, but actually makes alot of sense from a functional perspective and It also allows us to forgo any parentheses. It was also much easier for me to make and given this is my first language I didn't want to make it harder than it already was.
 
-Ok some code:
-To execute a line of code put your cursor on the line the use ctrl-enter or ctrl-return. You will see the result printed to the post pane on the right. Also, spaces are the only important syntax marker. You don't have to use commas in arrays for instance.
+/////////////////////////
+// HOW TO EVALUATE CODE
+/////////////////////////
+
+To execute a line of code put your cursor on the line then use any combination of either ctrl, alt, command (OS X), or shift then enter (or return).
+
+You will see the result printed to the post pane on the right. Also, spaces are the only important syntax marker. You don't have to use commas in arrays for instance.
 
 + 1 1 // The plus goes on the left. Weird?
 add 1 1 // All operators have a text equivalent!
