--- a/Lich.html
+++ b/Lich.html
@@ -95,6 +95,31 @@ void main()                    // The entry point for our fragment shader.
 	>
 // Lich.js
 
+// New update!
+
+=> stream0 BloodStream [ 1 0.5 0.25 ] [ { garbage 0.5 } { garbage 0.125 } ]
+=> stream1 BloodStream 1.0 { garbage 0.1 }
+=> stream2 BloodStream 0.75 { garbage 0.1 }
+=> stream3 BloodStream [ 0.125 0.25 0.5 0.75 1.0 ] { garbage 0.1 }
+stop stream0
+stop stream1
+stop stream2
+stop stream3
+stop stream3
+play stream3
+stop stream3
+
+=> stream4 BloodStream 0.5 { garbage 0.1 }
+=> stream5 BloodStream 0.4 { garbage 0.1 }
+stop stream4
+stop stream5
+
+// BloodStreams can be passed to eachother!
+=> stream6 BloodStream [ 0.5 1.0 0.25 ] [ 0.5 0.125 ]
+=> stream7 BloodStream [ 0.25 0.5 ] { garbage stream6 }
+stop stream6
+stop stream7
+
 If you're interested in the source you can find it on github:
 https://github.com/ChadMcKinney/Lich.js
 
