--- a/Lich.html
+++ b/Lich.html
@@ -121,6 +121,8 @@ stop stream7
 	</textarea>
 	
 	<textarea id="post" rows="6" spellcheck="false" readonly="true">Lich.js&#10;</textarea>
+	<textarea id="codeToCompile" rows="1" spellcheck="false" readonly="true" style="display:none;"
+		onChange="javascript:return parseChangeFromNetwork();"> </textarea>
 
 	<script LANGUAGE="JavaScript" type="text/javascript">
 		compileLich();
@@ -131,7 +133,7 @@ stop stream7
 	  mobwrite.syncGateway = 'http://mobwrite3.appspot.com/scripts/q.py';
 	</SCRIPT>
 	<BODY ONLOAD="
-		mobwrite.share('terminal'); 
+		mobwrite.share('terminal', 'codeToCompile'); 
 		mobwrite.minSyncInterval = 25;
 		mobwrite.maxSyncInterval = 1000;
 		mobwrite.syncInterval = 500;
