Small fix for the main html file

--- a/Lich.html
+++ b/Lich.html
@@ -91,7 +91,7 @@ void main()                    // The entry point for our fragment shader.
 		rows="28" 
 		spellcheck="false" 
 		onkeydown="javascript:return keyDown(event);" 
-		onkeyup="javascript:return keyUp(event);"
+		onkeyup="javascript:return keyUp(event);">
 // Lich.js
 
 printSamples
