--- a/Lich.html
+++ b/Lich.html
@@ -64,6 +64,20 @@
 // Lich.js - A Networked Audio / Visual Live Coding Language
 //////////////////////////////////////////////////////////////////////////////////
 
+=> cube1 cube [ 0 0 0 ] [ 90 90 90 ] [ 1 0.2 0.3 ] [ 0 145 200 ]
+=> stream1 Stream [ 0.001 ] { move cube1 - * random [ 1 1 1 ] 0.5 }
+=> stream2 Stream [ 0.001 ] { rotate cube1 * - * random [ 1 1 1 ] 0.5 0.1 }
+stop stream1
+stop stream2
+delete cube1
+
+=> cube2 cube [ -20 0 0 ] [ 90 90 90 ] [ 1 0.2 0.3 ] [ 0 200 145 ]
+=> stream3 Stream [ 0.001 ] { move cube2 - * random [ 1 1 1 ] 0.5 }
+=> stream4 Stream [ 0.001 ] { rotate cube2 * - * random [ 1 1 1 ] 0.5 0.1 }
+stop stream3
+stop stream4
+delete cube2
+
 // Background
 background [ 0 25 45 ]
 
