--- a/Lich.html
+++ b/Lich.html
@@ -66,8 +66,43 @@
 
 // Background
 background [ 0 25 45 ]
+print "Hello, are you coding right now?"
+print "Yes"
+setMasterGain 0.01
 
-random [ 1 1 1 ] 
+sinOsc 440 perc 1
+saw 440 perc 1
+square 440 perc 1
+tri 440 perc 1
+osc 40 genArray "gaussian" 20 perc 1
+delay sinOsc 440 perc 1 0.25 0.9
+
+// Heavy
+setMasterGain 0.1 // This will be load and DC offset, need to fix that in waveShape
+=> heavy : freq { waveShape osc freq genArray "gaussian" 20 perc 0.5 genArray "gaussian" 20 }
+::heavy 40
+=> heavyFreq Stream 1 [ 40 55 80 ]
+=> heavyStream Stream 1 { delay ::heavy heavyFreq 0.25 0.7 }
+
+waveShape sinOsc 440 perc 2 genArray "gaussian" 20
+
+// Summon: sampleName, begin, end
+summon "ThitherAndYon" 0 2
+// filter: source, frequency, type (low, high, band)
+filter summon "ThitherAndYon" random 30 2.0 random 2000 random 3
+// delay: source, delayTime, feedbackLevel
+delay filter summon "ThitherAndYon" random 30 2 random 2000 random 3 / 1 random 2000 0.999
+// waveShape: source, curve array
+waveShape summon "ThitherAndYon" 0 2 genArray "gaussian" 20
+waveShape delay summon "ThitherAndYon" random 30 2 / 1 random 2000 0.999 genArray "gaussian" random 200
+
+=> pluck : freq { delay filter summon "ThitherAndYon" random 30 2 random 2000 random 3 / 1 freq 0.999 }
+=> pluckFreq Stream 1 [ 40 880 440 660 ]
+=> pluckDur Stream 0.5 [ 1 3.5 1.25 2 2.125 4 ]
+=> plucker Stream pluckDur { ::pluck pluckFreq }
+
++ genArray "sine" 10 1
+random [ 0.1 1 20 0.5 ]
 
 // Make a cube with the arguments position size rotation and color
 => cube1 cube [ 0 0 0 ] [ 90 90 90 ] [ 1 0.2 0.3 ] [ 0 145 200 ]
