restructured the file system, adding a compiler directory

--- a/Lich.html
+++ b/Lich.html
@@ -80,8 +80,8 @@
 	<script type="text/javascript" src="CloudChamber.js/CloudChamber.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/MarchingCubes.js"></script>
 	<script type="text/javascript" src="third-party/CodeMirror.js"></script>
+	<script type="text/javascript" src="compiler/LichParser.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
-	<script type="text/javascript" src="LichParser.js"></script>
 </head>
 
 <body>
