Switching to JSHC jbison based parser

--- a/Lich.html
+++ b/Lich.html
@@ -80,8 +80,14 @@
 	<script type="text/javascript" src="CloudChamber.js/CloudChamber.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/MarchingCubes.js"></script>
 	<script type="text/javascript" src="third-party/CodeMirror.js"></script>
-	<script type="text/javascript" src="Lich.js"></script>
+	<script type="text/javascript" src="LichUtility.js"></script>
+	<script type="text/javascript" src="Parser/Lexeme.js"></script>
+	<script type="text/javascript" src="Parser/tokenize.js"></script>
+	<script type="text/javascript" src="Parser/preL.js"></script>
+	<script type="text/javascript" src="Parser/iterL.js"></script>
+	<script type="text/javascript" src="Parser/parser.js"></script>
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
+	<script type="text/javascript" src="Lich.js"></script>
 </head>
 
 <body>
