Updated genLexPar script

--- a/Lich.html
+++ b/Lich.html
@@ -85,7 +85,7 @@
 	<script type="text/javascript" src="Parser/tokenize.js"></script>
 	<script type="text/javascript" src="Parser/preL.js"></script>
 	<script type="text/javascript" src="Parser/iterL.js"></script>
-	<script type="text/javascript" src="Parser/parser.js"></script>
+	<script type="text/javascript" src="Parser/parse.js"></script>
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
 </head>
