--- a/Lich.html
+++ b/Lich.html
@@ -80,7 +80,8 @@
 	<script type="text/javascript" src="CloudChamber.js/CloudChamber.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/MarchingCubes.js"></script>
 	<script type="text/javascript" src="third-party/CodeMirror.js"></script>
-	<script type="text/javascript" src="LichUtility.js"></script>
+	<script type="text/javascript" src="Parser/ParseUtility.js"></script>
+	<script type="text/javascript" src="Parser/Types.js"></script>	
 	<script type="text/javascript" src="Parser/Lexeme.js"></script>
 	<script type="text/javascript" src="Parser/tokenize.js"></script>
 	<script type="text/javascript" src="Parser/preL.js"></script>
